include/pinbridge/pinbridge.h

typedef int32_t PbStatus;
typedef struct PbInsHandle
{
    int32_t opaque;
} PbInsHandle;
typedef struct PbRtnHandle
{
    int32_t opaque;
} PbRtnHandle;
typedef struct PbBblHandle
{
    int32_t opaque;
} PbBblHandle;
typedef struct PbSecHandle
{
    int32_t opaque;
} PbSecHandle;
typedef struct PbImgHandle
{
    int32_t opaque;
} PbImgHandle;
typedef struct PbSymHandle
{
    int32_t opaque;
} PbSymHandle;
typedef struct PbTraceOpaque* PbTraceHandle;
typedef struct PbCallbackHandle
{
    uint64_t opaque;
} PbCallbackHandle;
typedef struct PbContextOpaque* PbContextHandle;
typedef const struct PbContextOpaque* PbConstContextHandle;
typedef uint32_t PbRegId;
typedef uint32_t PbIargType;
typedef int32_t PbCallOrder;
typedef uint32_t PbPinErrorSeverity;
typedef uint32_t PbSecType;
typedef uint32_t PbThreadId;
typedef uint32_t PbContextChangeReason;
typedef uint32_t PbIpoint;
typedef uint32_t PbBufferId;
typedef uint32_t PbSyscallStandard;
typedef uint32_t PbUndecoration;
typedef uint32_t PbCallingStandard;
typedef uint32_t PbProtoArgKind;
typedef uint32_t PbProbeMode;
typedef struct PbIargListOpaque* PbIargListHandle;
typedef struct PbIargDescriptor
{
    PbIargType type;
    uint32_t reserved;
    uint64_t value;
    uint64_t value2;
} PbIargDescriptor;
typedef struct PbProtoOpaque* PbProtoHandle;
typedef struct PbProtoArg
{
    PbProtoArgKind kind;
    uint32_t reserved;
    uint64_t size;
} PbProtoArg;
typedef void(PB_CALL* PbTraceInstrumentCallback)(PbTraceHandle trace, void* user_data);
typedef void(PB_CALL* PbRtnInstrumentCallback)(PbRtnHandle rtn, void* user_data);
typedef void(PB_CALL* PbImgInstrumentCallback)(PbImgHandle img, void* user_data);
typedef void(PB_CALL* PbBblAnalysisCallback)(void* user_data);
typedef uint64_t(PB_CALL* PbBblPredicateCallback)(void* user_data);
typedef void(PB_CALL* PbTraceAnalysisCallback)(void* user_data);
typedef uint64_t(PB_CALL* PbTracePredicateCallback)(void* user_data);
typedef void(PB_CALL* PbTraceSmcCallback)(
    uint64_t trace_start, uint64_t trace_end, void* user_data);
typedef void*(PB_CALL* PbTraceBufferCallback)(
    PbBufferId id, PbThreadId thread_id, PbConstContextHandle context,
    void* buffer, uint64_t num_elements, void* user_data);
typedef void(PB_CALL* PbSyscallEntryCallback)(
    PbThreadId thread_id, PbContextHandle context,
    PbSyscallStandard standard, void* user_data);
typedef void(PB_CALL* PbSyscallExitCallback)(
    PbThreadId thread_id, PbContextHandle context,
    PbSyscallStandard standard, void* user_data);
PB_API PbStatus PB_CALL pb_sec_data(PbSecHandle sec, uint64_t* out_address);
PB_API PbStatus PB_CALL pb_sec_invalid(PbSecHandle* out_sec);
PB_API PbStatus PB_CALL pb_sec_name(
    PbSecHandle sec, char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_rtn_close(PbRtnHandle routine);
PB_API PbStatus PB_CALL pb_rtn_create_at(
    uint64_t address, const char* name, PbRtnHandle* out_routine);
PB_API PbStatus PB_CALL pb_rtn_find_by_address(
    uint64_t address, PbRtnHandle* out_routine);
PB_API PbStatus PB_CALL pb_rtn_find_by_name(
    PbImgHandle image, const char* name, PbRtnHandle* out_routine);
PB_API PbStatus PB_CALL pb_rtn_find_name_by_address(
    uint64_t address, char* buffer, uint64_t capacity,
    uint64_t* required_size);
PB_API PbStatus PB_CALL pb_rtn_funptr(
    PbRtnHandle routine, uint64_t* out_function_address);
PB_API PbStatus PB_CALL pb_rtn_invalid(PbRtnHandle* out_routine);
PB_API PbStatus PB_CALL pb_rtn_name(
    PbRtnHandle routine, char* buffer, uint64_t capacity,
    uint64_t* required_size);
PB_API PbStatus PB_CALL pb_rtn_open(PbRtnHandle routine);
PB_API PbStatus PB_CALL pb_rtn_replace(
    PbRtnHandle routine, uint64_t replacement_address,
    uint64_t* out_original_address);
PB_API PbStatus PB_CALL pb_rtn_replace_probed(
    PbRtnHandle routine, uint64_t replacement_address,
    uint64_t* out_original_address);
PB_API PbStatus PB_CALL pb_rtn_replace_probed_ex(
    PbRtnHandle routine, PbProbeMode mode, uint64_t replacement_address,
    uint64_t* out_original_address);
PB_API PbStatus PB_CALL pb_rtn_insert_call(
    PbRtnHandle routine, PbIpoint point, uint64_t callback_address,
    PbIargListHandle arguments);
PB_API PbStatus PB_CALL pb_rtn_insert_call_probed(
    PbRtnHandle routine, PbIpoint point, uint64_t callback_address,
    PbIargListHandle arguments, uint8_t* out_inserted);
PB_API PbStatus PB_CALL pb_rtn_insert_call_probed_ex(
    PbRtnHandle routine, PbIpoint point, PbProbeMode mode,
    uint64_t callback_address, PbIargListHandle arguments,
    uint8_t* out_inserted);
PB_API PbStatus PB_CALL pb_rtn_replace_signature(
    PbRtnHandle routine, uint64_t replacement_address,
    PbIargListHandle arguments, uint64_t* out_original_address);
PB_API PbStatus PB_CALL pb_rtn_replace_signature_probed(
    PbRtnHandle routine, uint64_t replacement_address,
    PbIargListHandle arguments, uint64_t* out_original_address);
PB_API PbStatus PB_CALL pb_rtn_replace_signature_probed_ex(
    PbRtnHandle routine, PbProbeMode mode, uint64_t replacement_address,
    PbIargListHandle arguments, uint64_t* out_original_address);
PB_API PbStatus PB_CALL pb_trace_add_instrument_function(
    PbTraceInstrumentCallback callback, void* user_data, PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_rtn_add_instrument_function(
    PbRtnInstrumentCallback callback, void* user_data, PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_img_add_instrument_function(
    PbImgInstrumentCallback callback, void* user_data, PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_app_img_head(PbImgHandle* out_image);
PB_API PbStatus PB_CALL pb_app_img_tail(PbImgHandle* out_image);
PB_API PbStatus PB_CALL pb_img_add_unload_function(
    PbImgInstrumentCallback callback, void* user_data,
    PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_img_close(PbImgHandle image);
PB_API PbStatus PB_CALL pb_img_find_by_address(
    uint64_t address, PbImgHandle* out_image);
PB_API PbStatus PB_CALL pb_img_find_by_id(
    uint32_t id, PbImgHandle* out_image);
PB_API PbStatus PB_CALL pb_img_invalid(PbImgHandle* out_image);
PB_API PbStatus PB_CALL pb_img_name(
    PbImgHandle image, char* buffer, uint64_t capacity,
    uint64_t* required_size);
PB_API PbStatus PB_CALL pb_img_open(
    const char* filename, PbImgHandle* out_image);
PB_API PbStatus PB_CALL pb_pin_undecorate_symbol_name(
    const char* symbol_name, PbUndecoration style,
    char* buffer, uint64_t capacity, uint64_t* required_size);
PB_API PbStatus PB_CALL pb_sym_address(
    PbSymHandle symbol, uint64_t* out_address);
PB_API PbStatus PB_CALL pb_sym_dynamic(
    PbSymHandle symbol, uint8_t* out_dynamic);
PB_API PbStatus PB_CALL pb_sym_generated_by_pin(
    PbSymHandle symbol, uint8_t* out_generated);
PB_API PbStatus PB_CALL pb_sym_index(
    PbSymHandle symbol, uint32_t* out_index);
PB_API PbStatus PB_CALL pb_sym_invalid(PbSymHandle* out_symbol);
PB_API PbStatus PB_CALL pb_sym_name(
    PbSymHandle symbol, char* buffer, uint64_t capacity,
    uint64_t* required_size);
PB_API PbStatus PB_CALL pb_sym_next(
    PbSymHandle symbol, PbSymHandle* out_symbol);
PB_API PbStatus PB_CALL pb_sym_prev(
    PbSymHandle symbol, PbSymHandle* out_symbol);
PB_API PbStatus PB_CALL pb_sym_valid(
    PbSymHandle symbol, uint8_t* out_valid);
PB_API PbStatus PB_CALL pb_sym_value(
    PbSymHandle symbol, uint64_t* out_value);
PB_API PbStatus PB_CALL pb_proto_arg_for_kind(
    PbProtoArgKind kind, PbProtoArg* out_arg);
PB_API PbStatus PB_CALL pb_proto_arg_aggregate(
    uint64_t size, PbProtoArg* out_arg);
PB_API PbStatus PB_CALL pb_proto_arg_end(PbProtoArg* out_arg);
PB_API PbStatus PB_CALL pb_proto_arg_enum(
    uint64_t size, PbProtoArg* out_arg);
PB_API PbStatus PB_CALL pb_proto_allocate(
    PbProtoArg return_arg, PbCallingStandard calling_standard,
    const char* name, const PbProtoArg* descriptors,
    uint32_t descriptor_count, PbProtoHandle* out_proto);
PB_API PbStatus PB_CALL pb_proto_free(PbProtoHandle proto);
PB_API PbStatus PB_CALL pb_iarg_list_alloc(PbIargListHandle* out_list);
PB_API PbStatus PB_CALL pb_iarg_list_add(
    PbIargListHandle list, const PbIargDescriptor* descriptors,
    uint32_t descriptor_count);
PB_API PbStatus PB_CALL pb_iarg_list_free(PbIargListHandle list);
PB_API PbStatus PB_CALL pb_pin_add_syscall_entry_function(
    PbSyscallEntryCallback callback, void* user_data,
    PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_add_syscall_exit_function(
    PbSyscallExitCallback callback, void* user_data,
    PbCallbackHandle* out_callback);
PB_API PbStatus PB_CALL pb_pin_get_syscall_argument(
    PbConstContextHandle context, PbSyscallStandard standard,
    uint32_t arg_num, uint64_t* out_value);
PB_API PbStatus PB_CALL pb_pin_get_syscall_errno(
    PbConstContextHandle context, PbSyscallStandard standard,
    uint64_t* out_value);
PB_API PbStatus PB_CALL pb_pin_get_syscall_number(
    PbConstContextHandle context, PbSyscallStandard standard,
    uint64_t* out_value);
PB_API PbStatus PB_CALL pb_pin_get_syscall_return(
    PbConstContextHandle context, PbSyscallStandard standard,
    uint64_t* out_value);
PB_API PbStatus PB_CALL pb_pin_replay_syscall_entry(
    PbThreadId thread_id, PbContextHandle context,
    PbSyscallStandard standard);
PB_API PbStatus PB_CALL pb_pin_replay_syscall_exit(
    PbThreadId thread_id, PbContextHandle context,
    PbSyscallStandard standard);
PB_API PbStatus PB_CALL pb_pin_set_syscall_argument(
    PbContextHandle context, PbSyscallStandard standard,
    uint32_t arg_num, uint64_t value);
PB_API PbStatus PB_CALL pb_pin_set_syscall_errno(
    PbContextHandle context, PbSyscallStandard standard, uint64_t value);
PB_API PbStatus PB_CALL pb_pin_set_syscall_number(
    PbContextHandle context, PbSyscallStandard standard, uint64_t value);
PB_API PbStatus PB_CALL pb_pin_set_syscall_return(
    PbContextHandle context, PbSyscallStandard standard, uint64_t value);
PB_API PbStatus PB_CALL pb_bbl_insert_call_before(
    PbBblHandle bbl, PbBblAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_bbl_insert_if_call_before(
    PbBblHandle bbl, PbBblPredicateCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_bbl_insert_then_call_before(
    PbBblHandle bbl, PbBblAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_trace_insert_call_before(
    PbTraceHandle trace, PbTraceAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_trace_insert_if_call_before(
    PbTraceHandle trace, PbTracePredicateCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_trace_insert_then_call_before(
    PbTraceHandle trace, PbTraceAnalysisCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_trace_add_smc_detected_function(
    PbTraceSmcCallback callback, void* user_data);
PB_API PbStatus PB_CALL pb_bbl_set_target_version(
    PbBblHandle bbl, uint64_t version);
PB_API PbStatus PB_CALL pb_trace_version(
    PbTraceHandle trace, uint64_t* out_version);
PB_API PbStatus PB_CALL pb_ins_insert_version_case(
    PbInsHandle ins, PbRegId reg, int32_t case_value, uint64_t version);
PB_API PbStatus PB_CALL pb_ins_insert_version_case_with_call_order(
    PbInsHandle ins, PbRegId reg, int32_t case_value, uint64_t version,
    PbCallOrder call_order);
PB_API PbStatus PB_CALL pb_ins_delete(PbInsHandle ins);
PB_API PbStatus PB_CALL pb_ins_insert_direct_jump(
    PbInsHandle ins, PbIpoint ipoint, uint64_t target);
PB_API PbStatus PB_CALL pb_ins_insert_indirect_jump(
    PbInsHandle ins, PbIpoint ipoint, PbRegId reg);
PB_API PbStatus PB_CALL pb_ins_rewrite_memory_operand(
    PbInsHandle ins, uint32_t memindex, PbRegId reg);
PB_API PbStatus PB_CALL pb_ins_rewrite_scattered_memory_operand(
    PbInsHandle ins, uint32_t memindex);
PB_API PbStatus PB_CALL pb_pin_define_trace_buffer(
    uint64_t record_size, uint32_t num_pages,
    PbTraceBufferCallback callback, void* user_data, PbBufferId* out_id);
PB_API PbStatus PB_CALL pb_pin_allocate_buffer(
    PbBufferId id, void** out_buffer);
PB_API PbStatus PB_CALL pb_pin_deallocate_buffer(
    PbBufferId id, void* buffer);
PB_API PbStatus PB_CALL pb_pin_get_buffer_pointer(
    PbContextHandle context, PbBufferId id, void** out_buffer);
PB_API PbStatus PB_CALL pb_pin_write_error_message(
    const char* message, int32_t type, PbPinErrorSeverity severity,
    const char* const* arguments, uint32_t argument_count);
PB_API PbStatus PB_CALL pb_callback_get_execution_order(
    PbCallbackHandle callback, PbCallOrder* out_order);
PB_API PbStatus PB_CALL pb_callback_set_execution_order(
    PbCallbackHandle callback, PbCallOrder order);
PB_API PbStatus PB_CALL pb_callback_get_execution_priority_deprecated(
    PbCallbackHandle callback, int32_t* out_priority);
PB_API PbStatus PB_CALL pb_callback_set_execution_priority_deprecated(
    PbCallbackHandle callback, int32_t priority);
PB_API PbStatus PB_CALL pb_img_entry_deprecated(
    PbImgHandle image, uint64_t* out_entry);
PB_API PbStatus PB_CALL pb_img_create_at(
    const char* filename, uint64_t start, uint64_t size, uint64_t load_offset,
    uint8_t main_executable, PbImgHandle* out_image);
PB_API PbStatus PB_CALL pb_img_replay_image_load(PbImgHandle image);
PB_API PbStatus PB_CALL pb_pin_replay_context_change(
    PbThreadId thread_id, PbConstContextHandle from, PbContextHandle to,
    PbContextChangeReason reason, int32_t info);