bindings/rust/pinbridge-sys/src/bindings.rs

    pub fn pb_sec_next(input: PbSecHandle, out_value: *mut PbSecHandle) -> PbStatus;
    pub fn pb_sec_prev(input: PbSecHandle, out_value: *mut PbSecHandle) -> PbStatus;
    pub fn pb_sec_rtn_head(input: PbSecHandle, out_value: *mut PbRtnHandle) -> PbStatus;
    pub fn pb_sec_rtn_tail(input: PbSecHandle, out_value: *mut PbRtnHandle) -> PbStatus;
    pub fn pb_sec_size(input: PbSecHandle, out_value: *mut u64) -> PbStatus;
    pub fn pb_sec_type(input: PbSecHandle, out_value: *mut PbSecType) -> PbStatus;
    pub fn pb_sec_valid(input: PbSecHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_trace_address(input: PbTraceHandle, out_value: *mut u64) -> PbStatus;
    pub fn pb_trace_bbl_head(input: PbTraceHandle, out_value: *mut PbBblHandle) -> PbStatus;
    pub fn pb_trace_bbl_tail(input: PbTraceHandle, out_value: *mut PbBblHandle) -> PbStatus;
    pub fn pb_trace_has_fall_through(input: PbTraceHandle, out_value: *mut u8) -> PbStatus;
    pub fn pb_trace_num_bbl(input: PbTraceHandle, out_value: *mut u32) -> PbStatus;
    pub fn pb_trace_num_ins(input: PbTraceHandle, out_value: *mut u32) -> PbStatus;
    pub fn pb_trace_rtn(input: PbTraceHandle, out_value: *mut PbRtnHandle) -> PbStatus;
    pub fn pb_trace_size(input: PbTraceHandle, out_value: *mut u64) -> PbStatus;
    pub fn pb_sec_data(sec: PbSecHandle, out_address: *mut u64) -> PbStatus;
    pub fn pb_sec_invalid(out_sec: *mut PbSecHandle) -> PbStatus;
    pub fn pb_sec_name(sec: PbSecHandle, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_rtn_close(routine: PbRtnHandle) -> PbStatus;
    pub fn pb_rtn_create_at(address: u64, name: *const c_char, out_routine: *mut PbRtnHandle) -> PbStatus;
    pub fn pb_rtn_find_by_address(address: u64, out_routine: *mut PbRtnHandle) -> PbStatus;
    pub fn pb_rtn_find_by_name(image: PbImgHandle, name: *const c_char, out_routine: *mut PbRtnHandle) -> PbStatus;
    pub fn pb_rtn_find_name_by_address(address: u64, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_rtn_funptr(routine: PbRtnHandle, out_function_address: *mut u64) -> PbStatus;
    pub fn pb_rtn_invalid(out_routine: *mut PbRtnHandle) -> PbStatus;
    pub fn pb_rtn_name(routine: PbRtnHandle, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_rtn_open(routine: PbRtnHandle) -> PbStatus;
    pub fn pb_rtn_replace(routine: PbRtnHandle, replacement_address: u64, out_original_address: *mut u64) -> PbStatus;
    pub fn pb_rtn_replace_probed(routine: PbRtnHandle, replacement_address: u64, out_original_address: *mut u64) -> PbStatus;
    pub fn pb_rtn_replace_probed_ex(routine: PbRtnHandle, mode: PbProbeMode, replacement_address: u64, out_original_address: *mut u64) -> PbStatus;
    pub fn pb_rtn_insert_call(routine: PbRtnHandle, point: PbIpoint, callback_address: u64, arguments: PbIargListHandle) -> PbStatus;
    pub fn pb_rtn_insert_call_probed(routine: PbRtnHandle, point: PbIpoint, callback_address: u64, arguments: PbIargListHandle, out_inserted: *mut u8) -> PbStatus;
    pub fn pb_rtn_insert_call_probed_ex(routine: PbRtnHandle, point: PbIpoint, mode: PbProbeMode, callback_address: u64, arguments: PbIargListHandle, out_inserted: *mut u8) -> PbStatus;
    pub fn pb_rtn_replace_signature(routine: PbRtnHandle, replacement_address: u64, arguments: PbIargListHandle, out_original_address: *mut u64) -> PbStatus;
    pub fn pb_rtn_replace_signature_probed(routine: PbRtnHandle, replacement_address: u64, arguments: PbIargListHandle, out_original_address: *mut u64) -> PbStatus;
    pub fn pb_rtn_replace_signature_probed_ex(routine: PbRtnHandle, mode: PbProbeMode, replacement_address: u64, arguments: PbIargListHandle, out_original_address: *mut u64) -> PbStatus;
    pub fn pb_trace_add_instrument_function(callback: PbTraceInstrumentCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_rtn_add_instrument_function(callback: PbRtnInstrumentCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_img_add_instrument_function(callback: PbImgInstrumentCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_app_img_head(out_image: *mut PbImgHandle) -> PbStatus;
    pub fn pb_app_img_tail(out_image: *mut PbImgHandle) -> PbStatus;
    pub fn pb_img_add_unload_function(callback: PbImgInstrumentCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_img_close(image: PbImgHandle) -> PbStatus;
    pub fn pb_img_find_by_address(address: u64, out_image: *mut PbImgHandle) -> PbStatus;
    pub fn pb_img_find_by_id(id: u32, out_image: *mut PbImgHandle) -> PbStatus;
    pub fn pb_img_invalid(out_image: *mut PbImgHandle) -> PbStatus;
    pub fn pb_img_name(image: PbImgHandle, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_img_open(filename: *const c_char, out_image: *mut PbImgHandle) -> PbStatus;
    pub fn pb_pin_undecorate_symbol_name(symbol_name: *const c_char, style: PbUndecoration, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_sym_address(symbol: PbSymHandle, out_address: *mut u64) -> PbStatus;
    pub fn pb_sym_dynamic(symbol: PbSymHandle, out_dynamic: *mut u8) -> PbStatus;
    pub fn pb_sym_generated_by_pin(symbol: PbSymHandle, out_generated: *mut u8) -> PbStatus;
    pub fn pb_sym_index(symbol: PbSymHandle, out_index: *mut u32) -> PbStatus;
    pub fn pb_sym_invalid(out_symbol: *mut PbSymHandle) -> PbStatus;
    pub fn pb_sym_name(symbol: PbSymHandle, buffer: *mut c_char, capacity: u64, required_size: *mut u64) -> PbStatus;
    pub fn pb_sym_next(symbol: PbSymHandle, out_symbol: *mut PbSymHandle) -> PbStatus;
    pub fn pb_sym_prev(symbol: PbSymHandle, out_symbol: *mut PbSymHandle) -> PbStatus;
    pub fn pb_sym_valid(symbol: PbSymHandle, out_valid: *mut u8) -> PbStatus;
    pub fn pb_sym_value(symbol: PbSymHandle, out_value: *mut u64) -> PbStatus;
    pub fn pb_proto_arg_for_kind(kind: PbProtoArgKind, out_arg: *mut PbProtoArg) -> PbStatus;
    pub fn pb_proto_arg_aggregate(size: u64, out_arg: *mut PbProtoArg) -> PbStatus;
    pub fn pb_proto_arg_end(out_arg: *mut PbProtoArg) -> PbStatus;
    pub fn pb_proto_arg_enum(size: u64, out_arg: *mut PbProtoArg) -> PbStatus;
    pub fn pb_proto_allocate(return_arg: PbProtoArg, calling_standard: PbCallingStandard, name: *const c_char, descriptors: *const PbProtoArg, descriptor_count: u32, out_proto: *mut PbProtoHandle) -> PbStatus;
    pub fn pb_proto_free(proto: PbProtoHandle) -> PbStatus;
    pub fn pb_iarg_list_alloc(out_list: *mut PbIargListHandle) -> PbStatus;
    pub fn pb_iarg_list_add(list: PbIargListHandle, descriptors: *const PbIargDescriptor, descriptor_count: u32) -> PbStatus;
    pub fn pb_iarg_list_free(list: PbIargListHandle) -> PbStatus;
    pub fn pb_pin_add_syscall_entry_function(callback: PbSyscallEntryCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_add_syscall_exit_function(callback: PbSyscallExitCallback, user_data: *mut c_void, out_callback: *mut PbCallbackHandle) -> PbStatus;
    pub fn pb_pin_get_syscall_argument(context: PbConstContextHandle, standard: PbSyscallStandard, arg_num: u32, out_value: *mut u64) -> PbStatus;
    pub fn pb_pin_get_syscall_errno(context: PbConstContextHandle, standard: PbSyscallStandard, out_value: *mut u64) -> PbStatus;
    pub fn pb_pin_get_syscall_number(context: PbConstContextHandle, standard: PbSyscallStandard, out_value: *mut u64) -> PbStatus;
    pub fn pb_pin_get_syscall_return(context: PbConstContextHandle, standard: PbSyscallStandard, out_value: *mut u64) -> PbStatus;
    pub fn pb_pin_replay_syscall_entry(thread_id: PbThreadId, context: PbContextHandle, standard: PbSyscallStandard) -> PbStatus;
    pub fn pb_pin_replay_syscall_exit(thread_id: PbThreadId, context: PbContextHandle, standard: PbSyscallStandard) -> PbStatus;
    pub fn pb_pin_set_syscall_argument(context: PbContextHandle, standard: PbSyscallStandard, arg_num: u32, value: u64) -> PbStatus;
    pub fn pb_pin_set_syscall_errno(context: PbContextHandle, standard: PbSyscallStandard, value: u64) -> PbStatus;
    pub fn pb_pin_set_syscall_number(context: PbContextHandle, standard: PbSyscallStandard, value: u64) -> PbStatus;
    pub fn pb_pin_set_syscall_return(context: PbContextHandle, standard: PbSyscallStandard, value: u64) -> PbStatus;
    pub fn pb_bbl_insert_call_before(bbl: PbBblHandle, callback: PbBblAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_bbl_insert_if_call_before(bbl: PbBblHandle, callback: PbBblPredicateCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_bbl_insert_then_call_before(bbl: PbBblHandle, callback: PbBblAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_trace_insert_call_before(trace: PbTraceHandle, callback: PbTraceAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_trace_insert_if_call_before(trace: PbTraceHandle, callback: PbTracePredicateCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_trace_insert_then_call_before(trace: PbTraceHandle, callback: PbTraceAnalysisCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_trace_add_smc_detected_function(callback: PbTraceSmcCallback, user_data: *mut c_void) -> PbStatus;
    pub fn pb_bbl_set_target_version(bbl: PbBblHandle, version: u64) -> PbStatus;
    pub fn pb_trace_version(trace: PbTraceHandle, out_version: *mut u64) -> PbStatus;
    pub fn pb_ins_insert_version_case(ins: PbInsHandle, reg: PbRegId, case_value: i32, version: u64) -> PbStatus;
    pub fn pb_ins_insert_version_case_with_call_order(ins: PbInsHandle, reg: PbRegId, case_value: i32, version: u64, call_order: PbCallOrder) -> PbStatus;
    pub fn pb_ins_delete(ins: PbInsHandle) -> PbStatus;
    pub fn pb_ins_insert_direct_jump(ins: PbInsHandle, ipoint: PbIpoint, target: u64) -> PbStatus;
    pub fn pb_ins_insert_indirect_jump(ins: PbInsHandle, ipoint: PbIpoint, reg: PbRegId) -> PbStatus;
    pub fn pb_ins_rewrite_memory_operand(ins: PbInsHandle, memindex: u32, reg: PbRegId) -> PbStatus;
    pub fn pb_ins_rewrite_scattered_memory_operand(ins: PbInsHandle, memindex: u32) -> PbStatus;
    pub fn pb_pin_define_trace_buffer(record_size: u64, num_pages: u32, callback: PbTraceBufferCallback, user_data: *mut c_void, out_id: *mut PbBufferId) -> PbStatus;
    pub fn pb_pin_allocate_buffer(id: PbBufferId, out_buffer: *mut *mut c_void) -> PbStatus;
    pub fn pb_pin_deallocate_buffer(id: PbBufferId, buffer: *mut c_void) -> PbStatus;
    pub fn pb_pin_get_buffer_pointer(context: PbContextHandle, id: PbBufferId, out_buffer: *mut *mut c_void) -> PbStatus;
    pub fn pb_pin_write_error_message(message: *const c_char, r#type: i32, severity: PbPinErrorSeverity, arguments: *const *const c_char, argument_count: u32) -> PbStatus;
    pub fn pb_callback_get_execution_order(callback: PbCallbackHandle, out_order: *mut PbCallOrder) -> PbStatus;
    pub fn pb_callback_set_execution_order(callback: PbCallbackHandle, order: PbCallOrder) -> PbStatus;
    pub fn pb_callback_get_execution_priority_deprecated(callback: PbCallbackHandle, out_priority: *mut i32) -> PbStatus;
    pub fn pb_callback_set_execution_priority_deprecated(callback: PbCallbackHandle, priority: i32) -> PbStatus;
    pub fn pb_img_entry_deprecated(image: PbImgHandle, out_entry: *mut u64) -> PbStatus;
    pub fn pb_img_create_at(filename: *const c_char, start: u64, size: u64, load_offset: u64, main_executable: u8, out_image: *mut PbImgHandle) -> PbStatus;
    pub fn pb_img_replay_image_load(image: PbImgHandle) -> PbStatus;
    pub fn pb_pin_replay_context_change(thread_id: PbThreadId, from: PbConstContextHandle, to: PbContextHandle, reason: PbContextChangeReason, info: i32) -> PbStatus;
